--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "~1.5.3",
     "nlp_compromise": "^1.1.2",
     "serve-favicon": "~2.2.1",
+    "socket.io": "^1.3.5",
     "superagent": "^1.2.0"
   }
 }
