--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "bluebird": "^2.9.30",
     "body-parser": "~1.12.4",
     "cookie-parser": "~1.3.5",
+    "dbpedia-spotlight": "^0.5.27",
     "debug": "~2.2.0",
+    "easypedia": "^1.3.1",
     "express": "~4.12.4",
     "jade": "~1.9.2",
     "lodash": "^3.9.3",
@@ -17,6 +19,9 @@
     "nlp_compromise": "^1.1.2",
     "serve-favicon": "~2.2.1",
     "socket.io": "^1.3.5",
-    "superagent": "^1.2.0"
+    "superagent": "^1.2.0",
+    "wikidata-sdk": "0.0.4",
+    "wikijs": "^0.1.1",
+    "wmcommons": "0.0.1",
   }
 }
