--- a/json/mapping.json
+++ b/json/mapping.json
@@ -41,5 +41,10 @@
   "Next Door": "NextDoor",
   "Wealth Front": "Wealthfront",
   "Greylock": "Greylock Partners",
-  "Greylock Ventures": "Greylock Partners"
+  "Greylock Ventures": "Greylock Partners",
+  "tell apart": "Twitter",
+  "tellapart": "Twitter",
+  "sublime text": "Sublime Text",
+  "emacs": "Emacs",
+  "emax": "Emacs"
 }
