--- a/json/mapping.json
+++ b/json/mapping.json
@@ -33,7 +33,6 @@
   "Matrix" : "Matrix (mathematics)",
   "server" : "Server (computing)",
   "Zuckerberg" : "Mark Zuckerberg",
-  "IP" : "Internet Protocol",
   "Brynn": "Sergey Brin",
   "Brin": "Sergey Brin",
   "YCombinator": "Y Combinator (company)",
@@ -46,5 +45,7 @@
   "tellapart": "Twitter",
   "sublime text": "Sublime Text",
   "emacs": "Emacs",
-  "emax": "Emacs"
+  "emax": "Emacs",
+  "Uber": "Uber (company)",
+  "Palantir": "Palantir Technologies"
 }
