Working cache, expanded whitelist

--- a/json/mapping.json
+++ b/json/mapping.json
@@ -1,62 +1,100 @@
 {
-  "NodeJS" : "Node.js",
-  "Node.JS" : "Node.js",
-  "Node J.S." : "Node.js",
-  "Atom" : "Atom (text editor)",
-  "Python" : "Python (programming language)",
-  "John Lilly" : "John Lilly (computer scientist)",
-  "Apache" : "Apache HTTP Server",
-  "Mongo" : "MongoDB",
-  "Ubuntu" : "Ubuntu (operating system)",
-  "Object-oriented" : "Object-oriented programming",
-  "Bash" : "Bash (Unix shell)",
-  "Shellshock" : "Shellshock (software bug)",
-  "AWS" : "Amazon Web Services",
-  "EC2" : "Amazon Elastic Compute Cloud",
-  "Bayesian" : "Naive Bayes classifier",
+  "nodejs" : "Node.js",
+  "node.js" : "Node.js",
+  "node j.s." : "Node.js",
+  "atom" : "Atom (text editor)",
+  "python" : "Python (programming language)",
+  "john lilly" : "John Lilly (computer scientist)",
+  "apache" : "Apache HTTP Server",
+  "mongo" : "MongoDB",
+  "ubuntu" : "Ubuntu (operating system)",
+  "object-oriented" : "Object-oriented programming",
+  "bash" : "Bash (Unix shell)",
+  "shellshock" : "Shellshock (software bug)",
+  "aws" : "Amazon Web Services",
+  "ec2" : "Amazon Elastic Compute Cloud",
+  "bayesian" : "Naive Bayes classifier",
   "k-means" : "k-means clustering",
   "k means" : "k-means clustering",
-  "PCA" : "Principal component analysis",
-  "Monte Carlo" : "Monte Carlo Method",
-  "Bootstrap" : "Bootstrap (front-end framework)",
+  "pca" : "Principal component analysis",
+  "monte carlo" : "Monte Carlo Method",
+  "bootstrap" : "Bootstrap (front-end framework)",
   "less" : "LESS",
-  "Sass" : "Sass (stylesheet language)",
+  "sass" : "Sass (stylesheet language)",
   "twisted" : "Twisted (software)",
-  "TCP" : "Transmission Control Protocol",
-  "SSH" : "Secure Shell",
-  "FTP" : "File Transfer Protocol",
-  "Callback" : "Callback (computer programming)",
+  "tcp" : "Transmission Control Protocol",
+  "ssh" : "Secure Shell",
+  "ftp" : "File Transfer Protocol",
+  "callback" : "Callback (computer programming)",
   "assembly" : "Assembly language",
-  "Pointer" : "Pointer (computer programming)",
+  "pointer" : "Pointer (computer programming)",
   "hash" : "Hash table",
-  "Cache" : "Cache (computing)",
-  "Matrix" : "Matrix (mathematics)",
-  "Server" : "Server (computing)",
-  "Zuckerberg" : "Mark Zuckerberg",
-  "Brynn": "Sergey Brin",
-  "Brin": "Sergey Brin",
-  "YCombinator": "Y Combinator (company)",
-  "Work day": "Workday",
-  "Next Door": "NextDoor",
-  "Wealth Front": "Wealthfront",
-  "Greylock": "Greylock Partners",
-  "Greylock Ventures": "Greylock Partners",
+  "cache" : "Cache (computing)",
+  "matrix" : "Matrix (mathematics)",
+  "server" : "Server (computing)",
+  "zuckerberg" : "Mark Zuckerberg",
+  "brynn": "Sergey Brin",
+  "brin": "Sergey Brin",
+  "ycombinator": "Y Combinator (company)",
+  "work day": "Workday",
+  "next door": "NextDoor",
+  "wealth front": "Wealthfront",
+  "greylock": "Greylock Partners",
+  "greylock ventures": "Greylock Partners",
   "tell apart": "Twitter",
   "tellapart": "Twitter",
   "sublime text": "Sublime Text",
   "emacs": "Emacs",
   "emax": "Emacs",
-  "Uber": "Uber (company)",
-  "Palantir": "Palantir Technologies",
+  "emax": "Emacs",
+  "uber": "Uber (company)",
+  "palantir": "Palantir Technologies",
   "x86": "X86",
-  "Java": "Java (programming language)",
-  "AirBNB": "Airbnb",
-  "iOS": "IOS",
-  "iPhone": "IPhone",
+  "java": "Java (programming language)",
+  "airbnb": "Airbnb",
+  "ios": "IOS",
+  "iphone": "IPhone",
   "neural network": "Artificial neural network",
-  "Node": "Node.js",
-  "NLP": "Natural language processing",
-  "Chrome": "Google Chrome",
-  "API": "Application programming interface",
-  "Augmenting reality": "Augmented reality"
+  "node": "Node.js",
+  "nlp": "Natural language processing",
+  "chrome": "Google Chrome",
+  "api": "Application programming interface",
+  "augmenting reality": "Augmented reality",
+  "gnu": "GNU",
+  "android": "Android (operating system)",
+  "apple": "Apple Inc.",
+  "markov": "Markov Chain",
+  "cash" : "cache",
+  "css": "Cascading Style Sheets",
+  "haskell": "Haskell (programming language)",
+  "safari":"Safari (web browser)",
+  "adobe": "Adobe Systems",
+  "workday": "Workday, Inc.", 
+  "work Day": "Workday, Inc.", 
+  "pascal": "Pascal (programming language)", 
+  "square": "Square, Inc.",
+  "mit": "Massachusetts Institute of Technology",
+  "jhu": "Johns Hopkins University",
+  "johns hopkins": "Johns Hopkins University",
+  "john hopkins" : "Johns Hopkins University",
+  "hopkins": "Johns Hopkins University",
+  "penn": "University of Pennsylvania",
+  "pen": "University of Pennsylvania",
+  "upenn": "University of Pennsylvania",
+  "operator": "Operator (computer programming)",
+  "svb": "Silicon Valley Bank",
+  "github": "GitHub",
+  "paypal": "PayPal",
+  "nvidia": "Nvidia",
+  "opensuse": "openSUSE",
+  "visual basic": "Visual Basic",
+  "vim": "Vim (text editor)",
+  "bsd": "Berkeley Software Distribution",
+  "monte carlo method": "Monte Carlo method",
+  "fortran": "Fortran",
+  "myspace": "Myspace",
+  "webkit": "WebKit",
+  "open source": "Open source",
+  "imap": "Internet Message Access Protocol",
+  "lp" :"nlp"
 }
